# workspace

./: .env.example  .gitignore  AGENT_PLANNER.md  Agent.md  README.md  docker-compose.yml  start-dev.sh
.agent/: ACTIVE_INTENT
.agent/intents/agent-engine-react-phase-1/: ACCEPTANCE.md  INTENT.md  LOG.md  SPEC.md
.agent/intents/agent-gateway-risk-fixes/: ACCEPTANCE.md  INTENT.md  LOG.md  SPEC.md
.agent/intents/agent-gateway-runtime-updates/: ACCEPTANCE.md  LOG.md  (+2 more)
.agent/test-commands/: integration.sh  unit.sh
.agent/test-stamps/: integration.txt  unit.txt
.githooks/: pre-commit
docs/architecture/: agent-adk.md  agent-engine.md
docs/ontology/: INDEX.md
go-agent-service/: Dockerfile  Dockerfile.keystore  Dockerfile.mcp  go.mod  go.sum
go-agent-service/migrations/: 001_memory_schema.sql  002_nucleus_integration.sql  003_app_registry.sql
keystore/: README.md
mcp-server/: README.md
nucleus-stub/: package-lock.json  package.json  tsconfig.json
nucleus-stub/src/: index.ts  schema.graphql
rust-gateway/: Cargo.toml  Dockerfile  build.rs
rust-gateway/src/: config.rs  error.rs  main.rs
rust-gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs
rust-gateway/src/proxy/: grpc_client.rs  mod.rs
rust-gateway/src/routes/: actions.rs  chat.rs  health.rs  mod.rs  stream.rs  tools.rs
scripts/: check-codex-config.sh  fetch-keycloak-token.sh  integration-nucleus-mcp.sh  record-codex-review.sh  record-integration-test.sh  record-unit-test.sh  run-codex-review.sh  run-integration-tests.sh  run-unit-tests.sh  set-active-intent.sh  verify-intent-complete.sh
(+138 files in other folders)
