[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2021"
description = "High-performance edge gateway for Workspace agent"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC client
tonic = "0.12"
prost = "0.13"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for Go service
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = "0.21"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "gateway"
path = "src/main.rs"
